@@ -1,3 +1,2 @@
 Defines
-config.h.in
 *.h
