@@ -40,7 +40,7 @@ for details and an example.
 Support for compressed manual pages is compiled into the \*M utilities by
 default.
 To completely disable this support, edit
-.i include/config.h
+.i config.h
 and comment out the following line
 .lp
 #define COMP_SRC 1
@@ -75,7 +75,7 @@ is appended.
 .lp
 To store cat files in an uncompressed state and to disable compressed
 extension processing completely, edit
-.i include/config.h
+.i config.h
 and comment out the following line
 .lp
 #define COMP_CAT 1
